(refactor) Moved missed appointments to appointment tabs

--- a/packages/esm-outpatient-app/translations/en.json
+++ b/packages/esm-outpatient-app/translations/en.json
@@ -1,10 +1,15 @@
 {
   "actions": "Actions",
+  "activeVisits": "Active Visits",
+  "add": "Add",
+  "addEntry": "Add entry",
+  "addisitToQueueTooltip": "Add",
   "addNewQueue": "Add new queue",
   "addNewService": "Add new service",
   "addPatientToList": "Add patient to list",
   "addPatientToQueue": "Add patient to queue",
   "addQueue": "Add queue",
+  "addVisitToQueue": "Add Visit To Queue?",
   "advancedSearch": "Advanced search",
   "age": "Age",
   "alistOfClients": "A list of clients waiting for ",
@@ -56,6 +61,7 @@
   "fields": "of the following fields",
   "filter": "Filter",
   "filters": "Filters",
+  "filterTable": "Filter table",
   "firstName": "First name",
   "firstNameSort": "First name (a-z)",
   "futureScheduledVisits": "{count, plural, one{{count} visit} other{{count} visits}} scheduled for dates in the future",
@@ -65,7 +71,9 @@
   "height": "Height",
   "hivCare": "HIV Care",
   "hoursAnd": "hours and ",
+  "idNumber": "ID Number",
   "indication": "Indication",
+  "InQueue": "In Queue",
   "lastEncounter": "Last encounter",
   "lastName": "Last name",
   "lastNameSort": "Last name (a-z)",
@@ -83,6 +91,7 @@
   "moreMetrics": "See more metrics",
   "name": "Name",
   "ncdCare": "NCD Care",
+  "noActiveVisitsForLocation": "There are no active visits to display for this location.",
   "noAppointmentsFound": "No appointments found",
   "noConceptsAvailable": "No concepts available",
   "noEncountersFound": "No encounters found",
@@ -99,6 +108,8 @@
   "noReturnDate": "There is no return date to display for this patient",
   "noStatusAvailable": "No Status Available",
   "notes": "Notes",
+  "NotInQueue": "Not In Queue",
+  "noVisitsFound": "No matching visits found",
   "noVisitTypes": "There are no visit types to display for this patient",
   "noVitalsFound": "No vitals found",
   "oldest": "Oldest first",
@@ -125,6 +136,8 @@
   "quantity": "Quantity",
   "queueAddedSuccessfully": "Queue addeded successfully",
   "queueDescription": "Queue description",
+  "queueEntryAddedSuccessfully": "Queue Entry Added Successfully",
+  "queueEntryAddFailed": "Error adding queue entry status",
   "queueEntryError": "Error adding patient to the queue",
   "queueEntryRemoved": "Queue entry removed",
   "queueEntryRemovedSuccessfully": "",
@@ -187,6 +200,7 @@
   "useTodaysDate": "Use today's date",
   "view": "View",
   "visitLocation": "Visit Location",
+  "visitStartTime": "Visit Time",
   "visitType": "Visit Type",
   "vitals": "Vitals",
   "vitalsForm": "Vitals form",
