feat: Add appointment status endpoints for honoured, scheduled and not-arrived appointment

--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -25,13 +25,15 @@
   "appointmentServiceName": "Appointment service name",
   "appointmentStatusChange": "Appointment status successfully changed to",
   "appointmentStatusTitleMessage": "Appointment status",
+  "arrived": "Arrived",
   "backToSearchResults": "Back to search results",
   "calendar": "Calendar",
+  "cameEarly": "Came Early",
+  "CameEarly": "Came Early",
   "cancel": "Cancel",
   "cancelAppointment": "Cancel Appointment",
   "cancelled": "Cancelled",
   "changeAppointmentStatus": "Change appointment status",
-  "checkedIn": "Checked In",
   "checkFilters": "Check the filters above",
   "checkIn": "Check In",
   "chooseProvider": "Select Provider",
@@ -57,6 +59,7 @@
   "editAppointment": "Edit Appointment",
   "editAppointments": "Edit Appointment",
   "emergency": "Emergency",
+  "emptyStateText": "There are no {displayText.toLowerCase()} to display",
   "encounters": "Encounters",
   "encounterType": "Encounter type",
   "endTime": "End Time",
@@ -70,6 +73,8 @@
   "futureScheduledVisits_plural": "",
   "getAppointmentReminder": "Would you like to get a reminder about this appointment?",
   "highestServiceVolume": "High volume Service : {time}",
+  "honored": "Honored",
+  "honoured": "Honoured",
   "identifier": "Identifier",
   "loading": "Loading...",
   "location": "Location",
@@ -86,12 +91,14 @@
   "noMatchingVisitTypeFound": "",
   "noPreviousVisitFound": "No previous visit found",
   "noPriorityFound": "No priority found",
+  "notArrived": "Not arrived",
   "notes": "Notes",
   "notUrgent": "Not Urgent",
   "or": "or",
   "patientDetails": "Patient Details",
   "patientName": "Patient name",
   "patients": "Patients",
+  "patientSearch": "Patient search",
   "pending": "Pending",
   "priority": "Priority",
   "promisedPateints": "Promised Pateints",
@@ -104,6 +111,8 @@
   "reasonForChanges": "Reason For Changes",
   "recentScheduledVisits": "{count, plural, one{{count} visit} other{{count} visits}} scheduled for +/- 7 days",
   "recentScheduledVisits_plural": "",
+  "rescheduled": "Rescheduled",
+  "Rescheduled": "Rescheduled",
   "save": "Save",
   "scheduled": "Scheduled",
   "scheduledAppointments": "Scheduled appointments",
