--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -25,7 +25,6 @@
   "appointmentServiceName": "Appointment service name",
   "appointmentStatusChange": "Appointment status successfully changed to",
   "appointmentStatusTitleMessage": "Appointment status",
-  "arrived": "Arrived",
   "backToSearchResults": "Back to search results",
   "calendar": "Calendar",
   "cameEarly": "Came Early",
@@ -41,6 +40,7 @@
   "community": "Community",
   "complete": "Complete",
   "completed": "Completed",
+  "count": "Count",
   "createAppointment": "Create appointment",
   "createAppointmentService": "Create appointment services",
   "createNewAppointment": "Create new appointment",
@@ -58,7 +58,7 @@
   "editAppointment": "Edit Appointment",
   "editAppointments": "Edit Appointment",
   "emergency": "Emergency",
-  "emptyStateText": "There are no {displayText.toLowerCase()} to display",
+  "emptyStateText": "There are no {displayText} to display",
   "encounters": "Encounters",
   "encounterType": "Encounter type",
   "endTime": "End Time",
@@ -73,8 +73,8 @@
   "getAppointmentReminder": "Would you like to get a reminder about this appointment?",
   "highestServiceVolume": "High volume Service : {time}",
   "honored": "Honored",
-  "honoured": "Honoured",
   "identifier": "Identifier",
+  "list": "List",
   "loading": "Loading...",
   "location": "Location",
   "lostToFollowUp": "Lost To Follow Up",
@@ -85,6 +85,7 @@
   "missingVisitType": "Missing visit type",
   "monthly": "Monthly",
   "name": "Name",
+  "next": "Next",
   "noAppointmentsToDisplay": "There are no appointments to display for this location",
   "noEncountersFound": "No encounters found",
   "noMatchingVisitTypeFound": "",
@@ -98,7 +99,7 @@
   "patientName": "Patient name",
   "patients": "Patients",
   "patientSearch": "Patient search",
-  "pending": "Pending",
+  "prev": "Prev",
   "priority": "Priority",
   "promisedPateints": "Promised Pateints",
   "promisedPatients": "Promised Patients",
@@ -116,10 +117,8 @@
   "scheduledAppointments": "Scheduled appointments",
   "search": "Search",
   "searchForAVisitType": "Search for a visit type",
-  "seeMissedAppointments": "See missed appointments",
   "selectAppointmentLocation": "Select where the appointment will take place",
   "selectAppointmentStatus": "Select status",
-  "selectAppointmentType": "Select an appointment type",
   "selectLocation": "Select a location",
   "selectProvider": "Select a provider",
   "selectQueue": "Select queue",
