feat: Add ability to auto-populate obs from NUPI
Add better error handling for client registry

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -136,6 +136,8 @@
   "updatePatientSuccessSnackbarSubtitle": "The patient's information has been successfully updated",
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
   "yearsEstimateRequired": "Estimated years required",
+  "updationSuccessToastDescription": "The patient's information has been successfully updated",
+  "useValues": "Use values",
   "validate": "Validate",
   "years": "Years",
   "yes": "Yes"
