--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -145,6 +145,7 @@
 =======
   "updationSuccessToastDescription": "The patient's information has been successfully updated",
   "updationSuccessToastTitle": "Patient Details Updated",
+  "useValues": "Use values",
   "validate": "Validate",
   "years": "Years",
   "yearsEstimateRequired": "Years estimate required",
