--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -37,6 +37,7 @@
   "chooseProvider": "Select Provider",
   "chooseQueue": "Select a queue",
   "chooseService": "Select service",
+  "comment": "Comment",
   "community": "Community",
   "complete": "Complete",
   "completed": "Completed",
@@ -48,11 +49,8 @@
   "date": "Date",
   "dateAndTimeOfVisit": "Date and time of visit",
   "dateTime": "Date & time",
-  "day": "Day",
   "defaulters": "Defaulters",
   "discard": "Discard",
-  "doubleBooking": "Appointment double booking",
-  "doublePatientBooking": "There exist an appointment on the specified service and appointment date",
   "downloadAppointmentList": "Download appointment list",
   "durationMins": "Duration min",
   "editAppointment": "Edit Appointment",
@@ -67,7 +65,6 @@
   "exitAndChangeStatus": "Change status",
   "facility": "Facility",
   "filter": "Filter",
-  "frequency": "Frequency",
   "futureScheduledVisits": " {count, plural, one{{count} visit} other{{count} visits}} scheduled for dates in the future",
   "futureScheduledVisits_plural": "",
   "getAppointmentReminder": "Would you like to get a reminder about this appointment?",
@@ -119,6 +116,7 @@
   "searchForAVisitType": "Search for a visit type",
   "selectAppointmentLocation": "Select where the appointment will take place",
   "selectAppointmentStatus": "Select status",
+  "selectAppointmentType": "Select an appointment type",
   "selectLocation": "Select a location",
   "selectProvider": "Select a provider",
   "selectQueue": "Select queue",
@@ -135,6 +133,7 @@
   "time": "Time",
   "todaysAppointments": "Today's Appointments",
   "total": "Total",
+  "typeInComments": "Type in appointment comment",
   "unScheduled": "UnScheduled",
   "unScheduledAppointments": "UnScheduled appointments",
   "upcomming": "Upcoming",
