(refactor) Replaced queue fields with queue extension (#623)

--- a/packages/esm-outpatient-app/translations/en.json
+++ b/packages/esm-outpatient-app/translations/en.json
@@ -25,10 +25,13 @@
   "changePatientQueueStatus": "Change patient queue status?",
   "checkFilters": "Check the filters above",
   "chooseService": "Select a service",
+  "chooseStatus": "Select a status",
   "clearAllQueueEntries": "Clear all queue entries?",
   "clearAllQueueEntriesWarningMessage": "Clearing all queue entries will remove  all the patients from the queues and will not allow you to fill any other encounter forms for the patients",
   "clearQueue": "Clear queue",
   "clinicMetrics": "Clinic metrics",
+  "configurePriorities": "Please configure priorities to continue.",
+  "configureServices": "Please configure services to continue.",
   "contactDetails": "Contact Details",
   "currentVisit": "Current visit",
   "date": "Date",
@@ -90,10 +93,12 @@
   "noPatientFoundMessage": "Sorry, no patient has been found",
   "noPatientsToDisplay": "No patients to display",
   "noPreviousVisitFound": "No previous visit found",
+  "noPrioritiesConfigured": "No priorities configured",
   "noPriorityFound": "No priority found",
   "noRecommendedVisitTypes": "There are no recommended visit types to display for this patient",
   "noResultsFound": "No results found",
   "noReturnDate": "There is no return date to display for this patient",
+  "noServicesConfigured": "No services configured",
   "noStatusAvailable": "No Status Available",
   "notes": "Notes",
   "noVisitTypes": "There are no visit types to display for this patient",
@@ -125,6 +130,7 @@
   "queueEntryRemovedSuccessfully": "",
   "queueEntryUpdateFailed": "Error updating queue entry status",
   "queueEntryUpdateSuccessfully": "Queue Entry Updated Successfully",
+  "queueLocation": "Queue Location",
   "queueName": "Queue name",
   "queuePriority": "Queue priority",
   "queuesClearedSuccessfully": "Queues Cleared Successfully",
@@ -152,7 +158,9 @@
   "selectLocation": "Select a location",
   "selectProgramType": "Select program type",
   "selectQueueConcept": "Select a concept for the queue",
+  "selectQueueLocation": "Select a queue location",
   "selectService": "Select a service",
+  "selectStatus": "Select a status",
   "selectVisitTyoe": "Select visit type",
   "selectVisitType": "Please select a Visit Type",
   "service": "Service",
@@ -162,6 +170,7 @@
   "showLess": "Show less",
   "showPatientsWaitingFor": "Show patients waiting for",
   "sortBy": "Sort by",
+  "sortWeight": "Sort weight",
   "sp02": "Sp02",
   "startAgeRangeInvalid": "Start age range is not valid",
   "startVisit": "Start a visit",
