--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -35,7 +35,6 @@
   "checkFilters": "Check the filters above",
   "checkIn": "Check In",
   "chooseProvider": "Select Provider",
-  "chooseQueue": "Select a queue",
   "chooseService": "Select service",
   "comment": "Comment",
   "community": "Community",
@@ -87,7 +86,6 @@
   "noEncountersFound": "No encounters found",
   "noMatchingVisitTypeFound": "",
   "noPreviousVisitFound": "No previous visit found",
-  "noPriorityFound": "No priority found",
   "notArrived": "Not arrived",
   "notes": "Notes",
   "notUrgent": "Not Urgent",
@@ -103,7 +101,7 @@
   "provider": "Provider",
   "providers": "Providers",
   "providersAvailableToday": "Providers available : {time}",
-  "queue": "Queue",
+  "queueAddedSuccessfully": "",
   "queueEntryError": "Error adding patient to the queue",
   "reasonForChanges": "Reason For Changes",
   "recentScheduledVisits": "{count, plural, one{{count} visit} other{{count} visits}} scheduled for +/- 7 days",
@@ -119,7 +117,6 @@
   "selectAppointmentType": "Select an appointment type",
   "selectLocation": "Select a location",
   "selectProvider": "Select a provider",
-  "selectQueue": "Select queue",
   "selectService": "Select a service",
   "selectVisitType": "Please select a Visit Type",
   "service": "Service",
@@ -127,9 +124,7 @@
   "serviceType": "Service Type",
   "serviceWorkloadTitle": "",
   "startTime": "Start Time",
-  "startVisit": "Start a visit",
   "startVisitError": "Error starting visit",
-  "startVisitQueueSuccessfully": "Patient has been added to active visits list and queue.",
   "time": "Time",
   "todaysAppointments": "Today's Appointments",
   "total": "Total",
@@ -140,6 +135,7 @@
   "view": "View",
   "viewCalendar": "View Calendar",
   "visitLocation": "Visit Location",
+  "visitStarted": "Visit started",
   "visitType": "Visit Type",
   "vitals": "Vitals",
   "weekly": "Weekly"
