--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -65,7 +65,7 @@
   "jumpTo": "Jump to",
   "male": "Male",
   "middleNameLabelText": "Middle Name",
-  "months": "Months",
+  "nascopNumber": "Nascop facility no",
   "nationalId": "National ID",
   "negativeMonths": "Negative months",
   "negativeYears": "Negative years",
@@ -79,8 +79,6 @@
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
-  "phoneEmailLabelText": "Phone, Email, etc.",
-  "phoneNumberInputLabelText": "Phone number",
   "postalCode": "Postcode",
   "postToRegistry": "Post to registry",
   "registerPatient": "Register Patient",
@@ -99,6 +97,7 @@
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
   "searchAddress": "Search address",
+  "selectAnOption": "Select an option",
   "selectCountry": "Select country",
   "selectIdentifierType": "Select identifier type",
   "sexFieldLabelText": "Sex",
@@ -116,7 +115,6 @@
   "updationSuccessToastTitle": "Patient Details Updated",
   "useValues": "Use values",
   "validate": "Validate",
-  "years": "Years",
   "yearsEstimateRequired": "Years estimate required",
   "yes": "Yes"
 }
