(feat) add nascop facility number to use value modal

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -81,6 +81,7 @@
   "negativeMonths": "Estimated months cannot be negative",
   "negativeYears": "Estimated years cannot be negative",
   "months": "Months",
+  "nascopNumber": "Nascop facility no",
   "nationalId": "National ID",
   "no": "No",
   "nonCodedCauseOfDeath": "Non-coded cause of death",
@@ -98,8 +99,6 @@
   "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
   "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
-  "phoneEmailLabelText": "Phone, Email, etc.",
-  "phoneNumberInputLabelText": "Phone number",
   "postalCode": "Postcode",
   "postToRegistry": "Post to registry",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
@@ -117,6 +116,7 @@
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
   "searchAddress": "Search address",
+  "selectAnOption": "Select an option",
   "selectCountry": "Select country",
   "selectIdentifierType": "Select identifier type",
   "sexFieldLabelText": "Sex",
@@ -132,7 +132,6 @@
   "updatePatientSuccessSnackbarSubtitle": "The patient's information has been successfully updated",
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
   "yearsEstimateRequired": "Estimated years required",
-  "updationSuccessToastDescription": "The patient's information has been successfully updated",
   "useValues": "Use values",
   "validate": "Validate",
   "years": "Years",
