--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -10,6 +10,8 @@
   "birthFieldLabelText": "Birth",
   "cancel": "Cancel",
   "causeOfDeathInputLabel": "Cause of death",
+  "clientRegistryEmpty": "Create & Post Patient",
+  "clientVerificationWithClientRegistry": "Client verification with client registry",
   "closeOverlay": "Close overlay",
   "codedPersonAttributeAnswerSetEmpty": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an answer concept set UUID '{{answerConceptSetUuid}}' that does not have any concept answers.",
   "codedPersonAttributeAnswerSetInvalid": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an invalid answer concept set UUID '{{answerConceptSetUuid}}'.",
@@ -30,11 +32,7 @@
   "deathdayIsRequired": "Death date is required when the patient is marked as deceased.",
   "deathdayNotInTheFuture": "",
   "cityVillage": "City",
-  "clientRegistryEmpty": "Create & Post Patient",
-  "clientVerificationWithClientRegistry": "Client verification with client registry",
   "continue": "Continue",
-  "country": "Country",
-  "countyDistrict": "District",
   "createNew": "Create New",
   "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
@@ -91,16 +89,17 @@
   "obsFieldUnknownDatatype": "Concept for obs field '{{fieldDefinitionId}}' has unknown datatype '{{datatypeName}}'",
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
+  "originFacilityCode": "Origin facility code",
+  "originFacilityName": "Origin facility name",
   "other": "Other",
   "patient": "Patient",
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
-  "patientRegistrationBreadcrumb": "Patient Registration",
   "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
   "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
-  "postalCode": "Postcode",
+  "patientRegistrationBreadcrumb": "Patient Registration",
   "postToRegistry": "Post to registry",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
