KHP3-4128 Add patient facility of origin on client registry modal (#808)

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -33,8 +33,6 @@
   "clientRegistryEmpty": "Create & Post Patient",
   "clientVerificationWithClientRegistry": "Client verification with client registry",
   "continue": "Continue",
-  "country": "Country",
-  "countyDistrict": "District",
   "createNew": "Create New",
   "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
@@ -100,7 +98,7 @@
   "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
   "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
-  "postalCode": "Postcode",
+  "patientRegistrationBreadcrumb": "Patient Registration",
   "postToRegistry": "Post to registry",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
