KHP3-4357 Under the scheduled, add a tab 'Completed' to show clients who have been checked out.

--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -29,6 +29,7 @@
   "appointmentServiceCreate": "Appointment service created successfully",
   "appointmentServiceName": "Appointment service name",
   "appointmentSuccessfullyCheckedIn": "It has been checked-in successfully",
+  "arrived": "Arrived",
   "back": "Back",
   "calendar": "Calendar",
   "cameEarly": "Came Early",
