--- a/packages/esm-appointments-app/translations/es.json
+++ b/packages/esm-appointments-app/translations/es.json
@@ -29,12 +29,14 @@
   "appointmentServiceCreate": "Servicio de citas creado exitosamente",
   "appointmentServiceName": "Nombre del servicio de citas",
   "appointmentSuccessfullyCheckedIn": "Se ha registrado correctamente",
+  "arrived": "Arrived",
   "back": "Atrás",
   "calendar": "Calendario",
   "cameEarly": "Llegó temprano",
   "cancel": "Cancelar",
   "cancelAppointment": "Cancelar cita",
   "cancelled": "Cancelada",
+  "checkedIn": "Checked in",
   "checkedOut": "Completada",
   "checkFilters": "Compruebe los filtros anteriores",
   "checkIn": "Registrar",
