--- a/packages/esm-appointments-app/translations/he.json
+++ b/packages/esm-appointments-app/translations/he.json
@@ -29,6 +29,7 @@
   "appointmentServiceCreate": "שירות התור נוצר בהצלחה",
   "appointmentServiceName": "שם שירות התור",
   "appointmentSuccessfullyCheckedIn": "It has been checked-in successfully",
+  "arrived": "Arrived",
   "back": "Back",
   "calendar": "לוח שנה",
   "cameEarly": "Came early",
