--- a/packages/esm-appointments-app/translations/km.json
+++ b/packages/esm-appointments-app/translations/km.json
@@ -29,6 +29,7 @@
   "appointmentServiceCreate": "សេវាកម្មណាត់ជួបត្រូវបានបង្កើតដោយជោគជ័យ",
   "appointmentServiceName": "ឈ្មោះសេវាកម្មណាត់ជួប",
   "appointmentSuccessfullyCheckedIn": "It has been checked-in successfully",
+  "arrived": "Arrived",
   "back": "Back",
   "calendar": "ប្រតិទិន",
   "cameEarly": "Came early",
