(enhc) further enhancements to patient registration

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -86,6 +86,7 @@
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
   "nonsensicalYears": "Estimated years cannot be more than 140",
   "numberInNameDubious": "Number in name is dubious",
+  "NUPI": "",
   "obsFieldUnknownDatatype": "Concept for obs field '{{fieldDefinitionId}}' has unknown datatype '{{datatypeName}}'",
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
@@ -116,12 +117,14 @@
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
   "searchAddress": "Search address",
+  "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
   "searchLocationPersonAttribute": "Search location",
   "selectAnOption": "Select an option",
   "selectCountry": "Select country",
   "selectIdentifierType": "Select identifier type",
   "sexFieldLabelText": "Sex",
+  "SHA Number": "",
   "source": "Source",
   "submitting": "Submitting",
   "timeFormat": "Time Format",
