--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -11,6 +11,8 @@
   "cancel": "Cancel",
   "causeOfDeathInputLabel": "Cause of Death",
   "clientRegistryEmpty": "Create & Post Patient",
+  "clientRegistryError": "Error occurred while reaching the client registry",
+  "clientRegistryErrorSubtitle": "Please proceed with registration contact system admin and  try again later",
   "clientVerificationWithClientRegistry": "Client verification with client registry",
   "closeOverlay": "Close overlay",
   "codedPersonAttributeAnswerSetEmpty": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an answer concept set UUID '{{answerConceptSetUuid}}' that does not have any concept answers.",
@@ -90,7 +92,7 @@
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
   "nonsensicalYears": "Estimated years cannot be more than 140",
   "numberInNameDubious": "Number in name is dubious",
-  "NUPI": "",
+  "nupi": "NUPI",
   "obsFieldUnknownDatatype": "Concept for obs field '{{fieldDefinitionId}}' has unknown datatype '{{datatypeName}}'",
   "optional": "optional",
   "other": "Other",
@@ -129,7 +131,7 @@
   "selectCountry": "Select country",
   "selectIdentifierType": "Select identifier type",
   "sexFieldLabelText": "Sex",
-  "SHA Number": "",
+  "shaNumber": "SHA Number",
   "source": "Source",
   "submitting": "Submitting",
   "timeFormat": "Time Format",
