--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -86,7 +86,7 @@
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
   "nonsensicalYears": "Estimated years cannot be more than 140",
   "numberInNameDubious": "Number in name is dubious",
-  "NUPI": "",
+  "nupi": "NUPI",
   "obsFieldUnknownDatatype": "Concept for obs field '{{fieldDefinitionId}}' has unknown datatype '{{datatypeName}}'",
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
@@ -121,7 +121,7 @@
   "searchLocationPersonAttribute": "Search location",
   "selectAnOption": "Select an option",
   "sexFieldLabelText": "Sex",
-  "SHA Number": "",
+  "shaNumber": "SHA Number",
   "source": "Source",
   "submitting": "Submitting",
   "timeFormat": "Time Format",
