Initial commit to fork management for kenyaemr

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -33,7 +33,7 @@
   "deathdayNotInTheFuture": "",
   "cityVillage": "City",
   "continue": "Continue",
-  "createNew": "Create New",
+  "createNewPatient": "Create new patient",
   "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
   "deathTimeFormatInvalid": "Time format is invalid",
@@ -93,7 +93,6 @@
   "originFacilityCode": "Origin facility code",
   "originFacilityName": "Origin facility name",
   "other": "Other",
-  "patient": "Patient",
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
