--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -33,7 +33,7 @@
   "clientRegistryEmpty": "Create & Post Patient",
   "clientVerificationWithClientRegistry": "Client verification with client registry",
   "continue": "Continue",
-  "createNew": "Create New",
+  "createNewPatient": "Create new patient",
   "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
   "deathTimeFormatInvalid": "Time format is invalid",
@@ -91,7 +91,6 @@
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
   "other": "Other",
-  "patient": "Patient",
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
