--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -100,7 +100,7 @@
   "searchIdentifierPlaceholder": "Search identifier",
   "selectAnOption": "Select an option",
   "sexFieldLabelText": "Sex",
-  "shaNumber": "SHA Number",
+  "shaNumber": "CR Number",
   "source": "Source",
   "stroke": "Stroke",
   "submitting": "Submitting",
