(feat) introduce feature flag to combine existing CR with HIE CR

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -67,6 +67,8 @@
   "genderUnspecified": "Gender unspecified",
   "givenNameLabelText": "First Name",
   "givenNameRequired": "Given name is required",
+  "identifierSearch": "Identifier search",
+  "identifierType": "Identifier type",
   "identifierValueRequired": "Identifier value is required",
   "idFieldLabelText": "Identifiers",
   "IDInstructions": "Select the identifiers you'd like to add for this patient:",
@@ -100,6 +102,7 @@
   "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
   "patientRegistrationBreadcrumb": "Patient Registration",
+  "patientVerificationFromHIE": "Patient verification from HIE",
   "postToRegistry": "Post to registry",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
@@ -115,6 +118,7 @@
   "removeIdentifierButton": "Remove identifier",
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
+  "search": "Search",
   "searchAddress": "Search address",
   "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
