(feat) Complete mapping HIE registry to registration form

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -43,6 +43,7 @@
   "enterIdentifierSearchValue": "Enter identifier search value",
   "error": "Error",
   "errorFetchingOrderedFields": "Error occured fetching ordered fields for address hierarchy",
+  "errorFetchingPatient": "Error fetching patient",
   "estimatedAgeInMonthsLabelText": "Estimated age in months",
   "estimatedAgeInYearsLabelText": "Estimated age in years",
   "familyNameLabelText": "Family Name",
@@ -55,6 +56,8 @@
   "genderUnspecified": "Gender is not specified",
   "givenNameLabelText": "First Name",
   "givenNameRequired": "Given name is required",
+  "healthID": "HealthID",
+  "hieModal": "HIE Patient Record Found",
   "identifierSearch": "Identifier search",
   "identifierType": "Identifier type",
   "identifierValueRequired": "Identifier value is required",
@@ -66,6 +69,7 @@
   "isDeadInputLabel": "Is Dead",
   "jumpTo": "Jump to",
   "male": "Male",
+  "maritalStatus": "Marital status",
   "middleNameLabelText": "Middle Name",
   "nationalId": "National ID",
   "negativeMonths": "Negative months",
@@ -91,6 +95,7 @@
   "relationshipPersonMustExist": "Related person must be an existing person",
   "relationshipPlaceholder": "Relationship",
   "relationshipRemovedText": "Relationship removed",
+  "relationships": "Relationships",
   "relationshipsSection": "Relationships",
   "relationshipToPatient": "Relationship to patient",
   "relativeFullNameLabelText": "Related person",
@@ -98,10 +103,10 @@
   "removeIdentifierButton": "Remove Identifier",
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
-  "search": "Search",
   "searchAddress": "Search address",
   "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
+  "searchingRegistry": "Searching registry...",
   "searchRegistry": "Search registry",
   "selectAnOption": "Select an option",
   "selectCountry": "Select country",
@@ -120,6 +125,7 @@
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
   "useValues": "Use values",
   "validate": "Validate",
+  "viewFullResponse": "View full response",
   "yearsEstimateRequired": "Years estimate required",
   "yes": "Yes"
 }
