(feat) Complete mapping HIE registry to registration form

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -54,6 +54,7 @@
   "error": "Error",
   "errorFetchingCodedCausesOfDeath": "Error fetching coded causes of death",
   "errorFetchingOrderedFields": "Error occured fetching ordered fields for address hierarchy",
+  "errorFetchingPatient": "Error fetching patient",
   "estimatedAgeInMonthsLabelText": "Estimated age in months",
   "estimatedAgeInYearsLabelText": "Estimated age in years",
   "familyNameLabelText": "Family Name",
@@ -67,6 +68,8 @@
   "genderUnspecified": "Gender unspecified",
   "givenNameLabelText": "First Name",
   "givenNameRequired": "Given name is required",
+  "healthID": "HealthID",
+  "hieModal": "HIE Patient Record Found",
   "identifierSearch": "Identifier search",
   "identifierType": "Identifier type",
   "identifierValueRequired": "Identifier value is required",
@@ -77,6 +80,7 @@
   "isDeadInputLabel": "Is dead",
   "jumpTo": "Jump to",
   "male": "Male",
+  "maritalStatus": "Marital status",
   "middleNameLabelText": "Middle Name",
   "negativeMonths": "Estimated months cannot be negative",
   "negativeYears": "Estimated years cannot be negative",
@@ -111,6 +115,7 @@
   "relationshipPersonMustExist": "Related person must be an existing person",
   "relationshipPlaceholder": "Relationship",
   "relationshipRemovedText": "Relationship removed",
+  "relationships": "Relationships",
   "relationshipsSection": "Relationships",
   "relationshipToPatient": "Relationship to patient",
   "relativeFullNameLabelText": "Full name",
@@ -118,7 +123,6 @@
   "removeIdentifierButton": "Remove identifier",
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
-  "search": "Search",
   "searchAddress": "Search address",
   "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
