--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -33,6 +33,7 @@
   "deleteIdentifierTooltip": "Delete",
   "deleteRelationshipTooltipText": "Delete",
   "demographicsSection": "Basic Info",
+  "dependants": "Dependants",
   "discard": "Discard",
   "discardModalBody": "The changes you made to this patient's details have not been saved. Discard changes?",
   "discardModalHeader": "Confirm Discard Changes",
@@ -95,7 +96,6 @@
   "relationshipPersonMustExist": "Related person must be an existing person",
   "relationshipPlaceholder": "Relationship",
   "relationshipRemovedText": "Relationship removed",
-  "relationships": "Relationships",
   "relationshipsSection": "Relationships",
   "relationshipToPatient": "Relationship to patient",
   "relativeFullNameLabelText": "Related person",
