(fix) remove `undefined` entries on attributes and identifiers (#43)

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -45,6 +45,7 @@
   "deleteIdentifierTooltip": "Delete",
   "deleteRelationshipTooltipText": "Delete",
   "demographicsSection": "Basic Info",
+  "dependants": "Dependants",
   "discard": "Discard",
   "dobToggleLabelText": "Date of Birth Known?",
   "editIdentifierTooltip": "Edit",
@@ -113,7 +114,6 @@
   "relationshipPersonMustExist": "Related person must be an existing person",
   "relationshipPlaceholder": "Relationship",
   "relationshipRemovedText": "Relationship removed",
-  "relationships": "Relationships",
   "relationshipsSection": "Relationships",
   "relationshipToPatient": "Relationship to patient",
   "relativeFullNameLabelText": "Full name",
